# clustutils4r

./: .gitignore  README.md  info.md  pypi_token  pyproject.toml  setup.py
src/clustutils4r/: eval_clustering.py  main.ipynb
src/clustutils4r.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/example_clustering/: info.md  main.ipynb  main.py
tests/example_clustering/results/: best_model.joblib  best_model_info.json
tests/example_clustering/results/models/AgglomerativeClustering/: best_model__AgglomerativeClustering.joblib  best_model_info.json  grid_search_results.csv  grid_search_results.json  parcoord_plot.html
tests/example_clustering/results/models/HDBSCAN/: best_model__HDBSCAN.joblib  best_model_info.json  grid_search_results.csv  grid_search_results.json  parcoord_plot.html
tests/example_clustering/results/models/KMeans/: best_model__KMeans.joblib  grid_search_results.csv  grid_search_results.json  parcoord_plot.html
tests/example_clustering/results/models/MeanShift/: best_model__MeanShift.joblib  best_model_info.json  grid_search_results.csv  grid_search_results.json  parcoord_plot.html
